@@ -1,0 +1,3 @@
+#define _open open
+#define _close close
+#define _unlink unlink
