@@ -1,3 +1,8 @@
+Fri Jul 30 07:59:53 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* util.c (ruby_add_suffix): fixed a bug returning uninitialized
+	  value.
+
 Fri Jul 30 07:48:04 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 	* ext/tk/extconf.rb: use TK_XINCLUDES on tkConfig.sh when not empty,
